// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`align defaults to left 1`] = `
<td
  class="euiTableRowCell"
>
  <div
    class="euiTableCellContent"
  >
    <span
      class="euiTableCellContent__text"
    />
  </div>
</td>
`;

exports[`align renders right when specified 1`] = `
<td
  class="euiTableRowCell"
>
  <div
    class="euiTableCellContent euiTableCellContent--alignRight"
  >
    <span
      class="euiTableCellContent__text"
    />
  </div>
</td>
`;

exports[`renders EuiTableRowCell 1`] = `
<td
  class="euiTableRowCell"
>
  <div
    aria-label="aria-label"
    class="euiTableCellContent testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <span
      class="euiTableCellContent__text"
    >
      children
    </span>
  </div>
</td>
`;

exports[`textOnly defaults to true 1`] = `
<td
  class="euiTableRowCell"
>
  <div
    class="euiTableCellContent"
  >
    <span
      class="euiTableCellContent__text"
    />
  </div>
</td>
`;

exports[`textOnly is rendered when specified 1`] = `
<td
  class="euiTableRowCell"
>
  <div
    class="euiTableCellContent euiTableCellContent--overflowingContent"
  />
</td>
`;

exports[`truncateText defaults to false 1`] = `
<td
  class="euiTableRowCell"
>
  <div
    class="euiTableCellContent"
  >
    <span
      class="euiTableCellContent__text"
    />
  </div>
</td>
`;

exports[`truncateText is rendered when specified 1`] = `
<td
  class="euiTableRowCell"
>
  <div
    class="euiTableCellContent euiTableCellContent--truncateText"
  >
    <span
      class="euiTableCellContent__text"
    />
  </div>
</td>
`;
